force-app/main/default/objects/Lead_Region_Alloccation__mdt/Lead_Region_Alloccation__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is use to assign username with respect to their region and states</description>
    <label>Lead Region Allocation</label>
    <pluralLabel>Lead Region Allocation</pluralLabel>
</CustomObject>