force-app/main/default/objects/Lead_Region_Alloccation__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Store Business unit detail</description>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>