force-app/main/default/objects/Lead_Region_Alloccation__mdt/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>This field help to populate territory/Region in lead on creation accroding to state</description>
    <label>Territory</label>
    <length>20</length>
    <type>Text</type>
</CustomField>